# functionbench

./: .gitignore  LICENSE  README.md  lmstudio_model.py  main.py  pyproject.toml  sample.jsonl  spec.md
data/: dataset.jsonl  recorded_outputs.jsonl  sample_dataset.jsonl  tools.json
functionbench/: __init__.py
functionbench/core/: evaluator.py  failure_taxonomy.py  output_parser.py  report.py  schema_loader.py  schema_validator.py  scoring.py
functionbench/models/: __init__.py  interfaces.py
functionbench/runner/: __init__.py  eval.py  recorded_model.py
functionbench/utils/: json_utils.py
reports/demo/: detailed.jsonl
scripts/: enrich_dataset.py  simple_to_dataset.py
tests/: __init__.py  conftest.py  test_evaluator.py  test_output_parser.py  test_report.py  test_schema_validator.py  test_scoring.py
