[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "functionbench"
version = "0.1.0"
description = "Deterministic structural reliability benchmark for tool-using LLMs"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "FunctionBench contributors" },
]
keywords = ["llm", "benchmark", "tool-calling", "evaluation", "json", "schema"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]
urls = { Repository = "https://github.com/AnaekBackend/functionbench", Issues = "https://github.com/AnaekBackend/functionbench/issues" }
dependencies = [
    "pydantic>=2.12.5",
    "rich>=14.3.3",
]

[project.scripts]
fb-eval = "functionbench.runner.eval:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
